--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,16 @@
+# Site Settings
+title: KoduGameLab
+tagline: KoduGameLab
+#email:  KoduSupport@InfiniteInstant.com
+description: >
+  KoduGameLab
+#baseurl: ""
+#url: ""
+#permalink: pretty
+#favicon: /path/to/favicon.png
+#gh_sponsor: chrisrhymes
+#hide_share_buttons: true
+
 remote_theme: chrisrhymes/bulma-clean-theme
 
 plugins:
